using System;
using RpgCombatKata.Domain.Interfaces;

namespace RpgCombatKata.Domain.Entities
{
    public class MapPosition
    {
        public uint X { get; set; }
    }
}
